[ci-skip] Use List.of instead of Array.asList